--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,26 @@
+ragas
+nltk
+langfuse
+openai
+transformers
+accelerate
+einops
+langchain
+xformers
+bitsandbytes
+sentence_transformers
+chromadb
+langchain-community
+langchain-core
+kagglehub
+datasets
+langchain-openai
+pytrec_eval
+crewai[tools]
+langchain_huggingface
+anyio==3.7.1
 transformers==4.36.0
 torch>=1.9.0
-sentence-transformers
-chromadb
-nltk
 numpy
 scikit-learn
 pandas
